# USD-Bedrock

./: .gitattributes  .gitignore  .shellcheckrc  AGENTS.md  README.md  launch.sh  multipass.yaml  setup.sh
.github/workflows/: cpp-tests.yml  shellcheck.yml
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  create.tsx  index.tsx
mobile/app/poll/: [id].tsx
mobile/lib/: api.ts
scripts/: build-core-plugin.sh  clang-tidy.sh  common.sh  launch.sh  launch_win.ps1  setup.sh  shellcheck.sh  sql.sh  test-cpp.sh  test.sh  watch-logs.sh
server/api/: Bedrock.php  Request.php  ValidationException.php  api.php
server/api/config/: AppConfig.php
server/api/requests/chats/: AddChatMemberRequest.php  ChatRole.php  CreateChatMessageRequest.php  CreateChatRequest.php  DeleteChatMessageRequest.php  EditChatRequest.php  (+8 more)
server/api/tests/: RouteBindingSmokeTest.php
server/config/: nginx.conf
server/core/: .clang-tidy  CMakeLists.txt  Core.cpp  Core.h
server/core/commands/: CommandError.h  CreateMessage.cpp  CreateMessage.h  CreatePoll.cpp  CreatePoll.h  DeletePoll.cpp  DeletePoll.h  EditPoll.cpp  EditPoll.h  GetMessages.cpp  GetMessages.h  GetPoll.cpp  HelloWorld.cpp  RequestBinding.h  ResponseBinding.h  SubmitVote.cpp  SubmitVote.h
server/core/config/: AppConfig.h
server/core/tables/: MessagesTable.cpp  MessagesTable.h  PollOptionsTable.cpp  PollOptionsTable.h  PollsTable.cpp  PollsTable.h  TableUtils.cpp  TableUtils.h  Tables.cpp  Tables.h  UsersTable.cpp  UsersTable.h  VotesTable.cpp  VotesTable.h
server/core/test/: CMakeLists.txt  CoreTester.h  README.md  TestHelpers.h  main.cpp
server/core/test/tests/: HelloWorldTest.h  MessagesTest.h  PollsTest.h  UsersTest.h
server/core/test/tests/unit/chats/: ChatMembersTest.h  ChatMessagesTest.h  ChatsTest.h
server/core/test/tests/unit/polls/: PollFeaturesTest.h  PollTextResponsesTest.h  PollVotesTest.h  PollsTest.h
server/core/test/tests/unit/system/: HelloWorldTest.h
server/core/test/tests/unit/users/: UsersTest.h
(+136 files in other folders)
